<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".EligibilityTestFirstActivity">

    <ScrollView
        android:id="@+id/ScrollView_MainMenu"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_gravity="center">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:layout_marginBottom="50dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginEnd="40dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/LinearLayout_form_register"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="45dp"
                            android:layout_marginBottom="10dp"
                            android:gravity="center"
                            android:orientation="vertical">



                            <TextView
                                android:id="@+id/user_register_DOB"
                                android:layout_width="280dp"
                                android:layout_height="50dp"
                                android:layout_marginTop="30dp"
                                android:background="@drawable/grad_button_line"
                                android:focusable="true"
                                android:hint="@string/date_of_birth"
                                android:padding="16dp"
                                android:textColor="@color/white"
                                android:textColorHint="@color/mediumGray"
                                android:textSize="13sp"
                                android:textStyle="bold" />


                            <Spinner
                                android:id="@+id/sp_new_user_register_gender"
                                android:layout_width="280dp"
                                android:layout_height="50dp"
                                android:layout_marginTop="30dp"
                                android:background="@drawable/grad_button_line"
                                android:entries="@array/array_gender" />


                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/LinearLayout_display_error_personal_details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="5dp"
                            android:background="@drawable/grad_error_message"
                            android:elevation="10dp"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:visibility="gone">



                            <TextView
                                android:id="@+id/DOB_error_id"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:lineHeight="16sp"
                                android:padding="2dp"
                                android:text="Please Select Date of Birth."
                                android:textColor="@color/white"
                                android:textSize="14sp"
                                android:visibility="gone" />

                            <TextView
                                android:id="@+id/Gender_error_id"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:lineHeight="16sp"
                                android:padding="2dp"
                                android:text="Please Select Gender."
                                android:textColor="@color/white"
                                android:textSize="14sp"
                                android:visibility="gone" />

                        </LinearLayout>

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            app:cardBackgroundColor="@color/blue"
                            app:cardCornerRadius="14dp">

                            <LinearLayout
                                android:id="@+id/Btn_to_eligibility_Register_page_two"
                                android:layout_width="180dp"
                                android:layout_height="40dp"
                                android:layout_gravity="center"
                                android:background="@drawable/grad_button_app"
                                android:clickable="true"
                                android:elevation="7dp"
                                android:focusable="true"
                                android:gravity="center"
                                android:orientation="horizontal"
                                android:requiresFadingEdge="vertical"
                                android:translationX="1dp"
                                android:translationY="-2dp"
                                android:translationZ="5dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/next_to_eligibility_two"
                                    android:textAlignment="center"
                                    android:textAllCaps="false"
                                    android:textColor="@color/white"
                                    android:textSize="15sp"
                                    android:textStyle="bold" />

                                <ProgressBar
                                    android:id="@+id/progressBarID_NEXT"
                                    android:layout_width="25dp"
                                    android:layout_height="28dp"
                                    android:layout_marginStart="10dp"
                                    android:elevation="2dp"
                                    android:indeterminate="true"
                                    android:indeterminateTint="@color/white"
                                    android:visibility="gone" />
                            </LinearLayout>
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>