...
        android:gravity="center"
        android:orientation="vertical">



        <Button
            android:id="@+id/Btn_go_to_register_page"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:background="@drawable/grad_button_app"
            android:stateListAnimator="@null"
            android:text="Create an account"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:translationZ="5dp"
...
