...
                                android:textColor="@color/white"
                                android:textColorHint="@color/mediumGray"
                                android:textSize="13sp"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/user_register_firstName"
                                android:layout_width="280dp"
                                android:layout_height="50dp"
                                android:layout_marginTop="15dp"
                                android:autofillHints="email"
                                android:background="@drawable/grad_button_line"
                                android:hint="@string/enter_first_name"
...
                                android:textColor="@color/white"
                                android:textColorHint="@color/mediumGray"
                                android:textSize="13sp"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/user_register_LastName"
                                android:layout_width="280dp"
                                android:layout_height="50dp"
                                android:layout_marginTop="15dp"
                                android:autofillHints="password"
                                android:background="@drawable/grad_button_line"
                                android:hint="@string/enter_last_name"
...
